SD, the Multivalue String Database

Change Log:
-----------------------

Version 0.7.1
-------------
(mab) Remove unsupported BASIC Functions / Statements:
      ABORTE, ABORTM
      CONNECT.PORT, ERRMSG, TTYGET, TTYSET, STOPE, STOPM 
      ENCRYPT, DECRYPT - replace with SDENCRYTP, SDDECRYPT
      ENTER.PACKAGE, EXIT.PACKAGE, PACKAGE, TRACE
      PICK.ERRMSG compiler mode
      Remove associated references from gplsrc/opcodes.h
      Remove code from gplsrc as necessary
(dsm) Removed compiled code in fld 16 of I type dictionary items that are copied from
FILES_DICTS. Created a Record in VOC, THIRD.COMPILE that recompiles them afterthey are 
copied.  Updated install scripts to call THIRD.COMPILE.
(dsm) Added SED and UPDATE.RECORD back after modifying them to not call tty routines as
the tty functionality has been removed.       
(dsm) Documentation: added a LibreOffice spreadsheet showing the VOC items that have 
been retained and removed compared to ScarletDME
(dsm) Documentation: added a LibreOffice document regarding installation.
(dsm) Have started modifying @ dictionary records and related dictionary items so that
default LIST reports are formatted for 120x36 terminal size.
(mab) Introduce max string error checking in SD.
      History: The original QM code that SD is based on was (is?) a 32 bit virtual machine. As such
	  strings are limited in size to just under 2 GB.  The issue is there is no size checking and a
	  user could attempt to create or load a string at or above this limit, causing SD to crash (segfault).
	  Changes to date:
	    sdclilib client will not allow user to write a record > MAX_STRING_SIZE
		Directory read of a file (record) > MAX_STRING_SIZE not allowed.
        Functions: append (':='), CHANGE(), concatenate (':'), INSERT(), REPLACE(), STR()
         will not allow a string > MAX_STRING_SIZE to be created.		
		
(dsm) Change max string size to 1 GB
 

Version 0.7.0
-------------