@@ -291,5 +291,6 @@
 
 /* SDEXT error codes */
 #define SD_EXT_KEY_ERR -10300  /* unknown key */
+#define SD_EXT_ARG_CNT -10301  /* incorrect argument count for called function */
 
 /* END-CODE */
