@@ -341,7 +341,8 @@
 #define SD_Encode64     202  /* encode as Base64 */
 
 /* Key Codes for op_sdext     */
-#define SDEXT_TestIt 1  /* Function Test */
-
+#define SDEXT_TestIt   1  /* Function Test */
+#define SD_SALT      100  /* sd_encrypt_sodium sd_salt function */
+#define SD_KEYFROMPW 101  /* sd_encrypt_sodium sd_KeyFromPW function */
 
 /* END-CODE */
